# emerillon

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  emerillon.doap
bindings/: Makefile.am
bindings/vala/: Makefile.am  create.sh  emerillon.deps  emerillon.vapi
bindings/vala/emerillon/: emerillon.defines  emerillon.files  emerillon.gi  emerillon.metadata  emerillon.namespace
cut-paste/: Makefile.am  empathy-cell-renderer-activatable.c
data/: Makefile.am  emerillion-ui.xml  emerillion.schemas.in  emerillon-ui.xml  emerillon.convert  emerillon.desktop.in.in  emerillon.pc.in  emerillon.schemas.in  org.gnome.emerillon.gschema.xml.in
docs/reference/: Makefile.am  emerillon-docs.sgml
emerillion/: Makefile.am  address.c  address.h  config-keys.h  main.c  sidebar.c  sidebar.h  window.c  window.h
emerillon/: Makefile.am  address.c  address.h  config-keys.h  emerillon.h  main.c  manager.c  manager.h  preferences.c  preferences.h  private.h  sidebar.c  sidebar.h  window.c  window.h
help/: Makefile.am  emerillon.omf.in
help/C/: about.page  index.page  intro.page  license.page  plugins-copylink.page  plugins-mapposition.page  plugins-placemarks.page  plugins.page  usage.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/sl/: sl.po
help/uk/: uk.po
plugins/: Makefile.am
plugins/copy-link/: copy-link.c  copy-link.emerillon-plugin.in  copy-link.h  copy-link.plugin.in
plugins/map-position/: map-position.c  map-position.emerillon-plugin.in  map-position.h  map-position.plugin.in
plugins/placemarks/: add-dialog.c  add-dialog.h  manage-dialog.c  manage-dialog.h  placemarks-model.h  placemarks.c  placemarks.emerillon-plugin.in  placemarks.h  placemarks.plugin.in
plugins/search/: search.c  search.emerillon-plugin.in  search.h  search.plugin.in
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fr.po  gl.po  he.po  hu.po  id.po  is.po  it.po  ja.po  lv.po  nb.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
