noinst_LTLIBRARIES = libephyspinner.la libempathycell.la

libephyspinner_la_SOURCES = \
	ephy-spinner.h \
	ephy-spinner.c

libephyspinner_la_CFLAGS = \
	-I$(top_srcdir)/src	\
	$(EMERILLON_CFLAGS)		\
	$(WARN_CFLAGS)

libempathycell_la_SOURCES = \
	empathy-cell-renderer-activatable.h \
	empathy-cell-renderer-activatable.c

libempathycell_la_CFLAGS = \
	-I$(top_srcdir)/src	\
	$(EMERILLON_CFLAGS)		\
	$(WARN_CFLAGS)
