include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = emerillon
DOC_INCLUDES = legal.xml

DOC_FIGURES = 

DOC_PAGES = about.page	\
	index.page	\
	intro.page	\
	license.page	\
	plugins-copylink.page	\
	plugins-mapposition.page	\
	plugins.page	\
	plugins-placemarks.page	\
	usage.page

DOC_LINGUAS = de

dist-hook: doc-dist-hook
